--- a/pipeline-templates/build-test.yaml
+++ b/pipeline-templates/build-test.yaml
@@ -34,7 +34,7 @@ jobs:
   - ${{ if eq(parameters.pool.os, 'linux') }}:
     - bash: |
         sudo apt-get update
-        sudo apt-get install -y libgbm1
+        sudo apt-get install -y libgbm1 xvfb libnss3 libatk-bridge2.0-0 libatk1.0-0 libgtk-3-0 libgbm-dev libxkbcommon-x11-0 libdrm2 libx11-xcb1 libasound2
       displayName: 📦 Install VS Code dependencies
     - bash: |
         /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
